odds ratio calculation in R

--- a/Scritps/RScripts/counting_peptides.html
+++ b/Scritps/RScripts/counting_peptides.html
@@ -76,9 +76,9 @@ img {
 ## 
 ## Attaching package: 'dplyr'
 ## 
-## The following object is masked from 'package:stats':
+## The following objects are masked from 'package:stats':
 ## 
-##     filter
+##     filter, lag
 ## 
 ## The following objects are masked from 'package:base':
 ## 
@@ -844,6 +844,33 @@ peptide.mod.counts &lt;- Reduce(inner_join, c(list(peptide.anymod.counts)
 ##   (int), mod189 (int), mod190 (int), mod191 (int), mod192 (int), mod193
 ##   (int), mod194 (int), mod195 (int), mod196 (int), mod197 (int), mod198
 ##   (int), mod199 (int), mod200 (int)</code></pre>
+<p>Calculating the odds ratio of modified to unmodified peptides</p>
+<pre class="r"><code>odds&lt;-rep(0,400)
+for ( i in -200:-1) {
+sum&lt;-0;
+#Just counting the unmods when there is a mod
+for (k in 1:dim(peptideAll)[1]) {
+  if(peptideAll[k,204+i]&gt;0) { 
+    sum=sum+ peptideAll[k,2]
+    }
+}
+#odds ratio of modified to unmodified
+odds[i+201]=sum(peptideAll[204+i])/(sum+1);
+}
+
+for ( i in 1:200) {
+sum&lt;-0;
+#Just counting the unmods when there is a mod
+for (k in 1:dim(peptideAll)[1]) {
+  if(peptideAll[k,203+i]&gt;0) { 
+    sum=sum+ peptideAll[k,2]
+    }
+}
+#odds ratio of modified to unmodified
+odds[i+200]=sum(peptideAll[203+i])/(sum+1);
+}
+head(odds)</code></pre>
+<pre><code>## [1] 0 0 0 0 0 0</code></pre>
 
 
 </div>
