First mod. vs. time plot.

--- a/Analysis/extract_peptide_mods.html
+++ b/Analysis/extract_peptide_mods.html
@@ -200,35 +200,34 @@ mod_count.list &lt;- lapply(PSMdata.list, countMods, -2, 2) # limit mod range fo
 ## Counting modifications between -2 and 2 
 ## Counting modifications between -2 and 2 
 ## Counting modifications between -2 and 2</code></pre>
-<pre class="r"><code>writeCSVFromList(mod_count.list, &quot;_PSM_mod_counts.csv.gz&quot;,
-                   &quot;./GeneratedDataFiles/PSMHits&quot;, gz = TRUE)</code></pre>
-<pre><code>## Writing file: ./GeneratedDataFiles/PSMHits/MURI_7_PSM_mod_counts.csv.gz 
-## Writing file: ./GeneratedDataFiles/PSMHits/MURI_8_PSM_mod_counts.csv.gz 
-## Writing file: ./GeneratedDataFiles/PSMHits/MURI_9_PSM_mod_counts.csv.gz 
-## Writing file: ./GeneratedDataFiles/PSMHits/MURI_10_PSM_mod_counts.csv.gz 
-## Writing file: ./GeneratedDataFiles/PSMHits/MURI_11_PSM_mod_counts.csv.gz 
-## Writing file: ./GeneratedDataFiles/PSMHits/MURI_12_PSM_mod_counts.csv.gz 
-## Writing file: ./GeneratedDataFiles/PSMHits/MURI_13_PSM_mod_counts.csv.gz 
-## Writing file: ./GeneratedDataFiles/PSMHits/MURI_14_PSM_mod_counts.csv.gz 
-## Writing file: ./GeneratedDataFiles/PSMHits/MURI_15_PSM_mod_counts.csv.gz 
-## Writing file: ./GeneratedDataFiles/PSMHits/MURI_16_PSM_mod_counts.csv.gz 
-## Writing file: ./GeneratedDataFiles/PSMHits/MURI_17_PSM_mod_counts.csv.gz 
-## Writing file: ./GeneratedDataFiles/PSMHits/MURI_18_PSM_mod_counts.csv.gz 
-## Writing file: ./GeneratedDataFiles/PSMHits/MURI_19_PSM_mod_counts.csv.gz 
-## Writing file: ./GeneratedDataFiles/PSMHits/MURI_20_PSM_mod_counts.csv.gz 
-## Writing file: ./GeneratedDataFiles/PSMHits/MURI_21_PSM_mod_counts.csv.gz 
-## Writing file: ./GeneratedDataFiles/PSMHits/MURI_22_PSM_mod_counts.csv.gz 
-## Writing file: ./GeneratedDataFiles/PSMHits/MURI_23_PSM_mod_counts.csv.gz 
-## Writing file: ./GeneratedDataFiles/PSMHits/MURI_24_PSM_mod_counts.csv.gz 
-## Writing file: ./GeneratedDataFiles/PSMHits/MURI_25_PSM_mod_counts.csv.gz 
-## Writing file: ./GeneratedDataFiles/PSMHits/MURI_26_PSM_mod_counts.csv.gz 
-## Writing file: ./GeneratedDataFiles/PSMHits/MURI_27_PSM_mod_counts.csv.gz 
-## Writing file: ./GeneratedDataFiles/PSMHits/MURI_28_PSM_mod_counts.csv.gz 
-## Writing file: ./GeneratedDataFiles/PSMHits/MURI_29_PSM_mod_counts.csv.gz 
-## Writing file: ./GeneratedDataFiles/PSMHits/MURI_30_PSM_mod_counts.csv.gz 
-## Writing file: ./GeneratedDataFiles/PSMHits/MURI_31_PSM_mod_counts.csv.gz 
-## Writing file: ./GeneratedDataFiles/PSMHits/MURI_32_PSM_mod_counts.csv.gz 
-## Writing file: ./GeneratedDataFiles/PSMHits/MURI_33_PSM_mod_counts.csv.gz</code></pre>
+<pre class="r"><code>writeCSVFromList(mod_count.list, &quot;_PSM_mod_counts.csv&quot;, &quot;./GeneratedDataFiles/PSMHits&quot;)</code></pre>
+<pre><code>## Writing file: ./GeneratedDataFiles/PSMHits/MURI_7_PSM_mod_counts.csv 
+## Writing file: ./GeneratedDataFiles/PSMHits/MURI_8_PSM_mod_counts.csv 
+## Writing file: ./GeneratedDataFiles/PSMHits/MURI_9_PSM_mod_counts.csv 
+## Writing file: ./GeneratedDataFiles/PSMHits/MURI_10_PSM_mod_counts.csv 
+## Writing file: ./GeneratedDataFiles/PSMHits/MURI_11_PSM_mod_counts.csv 
+## Writing file: ./GeneratedDataFiles/PSMHits/MURI_12_PSM_mod_counts.csv 
+## Writing file: ./GeneratedDataFiles/PSMHits/MURI_13_PSM_mod_counts.csv 
+## Writing file: ./GeneratedDataFiles/PSMHits/MURI_14_PSM_mod_counts.csv 
+## Writing file: ./GeneratedDataFiles/PSMHits/MURI_15_PSM_mod_counts.csv 
+## Writing file: ./GeneratedDataFiles/PSMHits/MURI_16_PSM_mod_counts.csv 
+## Writing file: ./GeneratedDataFiles/PSMHits/MURI_17_PSM_mod_counts.csv 
+## Writing file: ./GeneratedDataFiles/PSMHits/MURI_18_PSM_mod_counts.csv 
+## Writing file: ./GeneratedDataFiles/PSMHits/MURI_19_PSM_mod_counts.csv 
+## Writing file: ./GeneratedDataFiles/PSMHits/MURI_20_PSM_mod_counts.csv 
+## Writing file: ./GeneratedDataFiles/PSMHits/MURI_21_PSM_mod_counts.csv 
+## Writing file: ./GeneratedDataFiles/PSMHits/MURI_22_PSM_mod_counts.csv 
+## Writing file: ./GeneratedDataFiles/PSMHits/MURI_23_PSM_mod_counts.csv 
+## Writing file: ./GeneratedDataFiles/PSMHits/MURI_24_PSM_mod_counts.csv 
+## Writing file: ./GeneratedDataFiles/PSMHits/MURI_25_PSM_mod_counts.csv 
+## Writing file: ./GeneratedDataFiles/PSMHits/MURI_26_PSM_mod_counts.csv 
+## Writing file: ./GeneratedDataFiles/PSMHits/MURI_27_PSM_mod_counts.csv 
+## Writing file: ./GeneratedDataFiles/PSMHits/MURI_28_PSM_mod_counts.csv 
+## Writing file: ./GeneratedDataFiles/PSMHits/MURI_29_PSM_mod_counts.csv 
+## Writing file: ./GeneratedDataFiles/PSMHits/MURI_30_PSM_mod_counts.csv 
+## Writing file: ./GeneratedDataFiles/PSMHits/MURI_31_PSM_mod_counts.csv 
+## Writing file: ./GeneratedDataFiles/PSMHits/MURI_32_PSM_mod_counts.csv 
+## Writing file: ./GeneratedDataFiles/PSMHits/MURI_33_PSM_mod_counts.csv</code></pre>
 
 
 </div>
